# bitpixels

./: CMakeLists.txt  LICENSE  README.md  bitpixels.pc.in
include/: bitpixels.h
src/: bitpixels.c  test.c
